# boss-skills

./: .env.sample  .gitignore  .pre-commit-config.yaml  .rumdl.toml  CLAUDE.md  Makefile  README.md  cliff.toml  development.md  lychee.toml  mise.toml  pyproject.toml  pyrightconfig.json  ruff.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/rules/: plugin-structure.md
.claude/skills/twitter-media-downloader/: SKILL.md
.claude/skills/twitter-media-downloader/scripts/: download.py
.claude/skills/twitter-to-reel/: SKILL.md
.claude/skills/twitter-to-reel/scripts/: compose_video.py  create_reel.py  screenshot_tweet.py  utils.py
.cursor/: worktrees.json
.cursor/rules/: general.mdc
.github/workflows/: ci.yml
devtools/: lint.py
docs/: LEARN.md  REFERENCES.md  scripts.md
plugins/social-media/twitter-tools/: README.md
plugins/social-media/twitter-tools/.claude-plugin/: plugin.json
plugins/social-media/twitter-tools/skills/twitter-media-downloader/: SKILL.md
plugins/social-media/twitter-tools/skills/twitter-media-downloader/scripts/: download.py
plugins/social-media/twitter-tools/skills/twitter-media-downloader/scripts/tests/: __init__.py  conftest.py  test_download.py
plugins/social-media/twitter-tools/skills/twitter-to-reel/: SKILL.md
plugins/social-media/twitter-tools/skills/twitter-to-reel/scripts/: compose_video.py  create_reel.py  screenshot_tweet.py  utils.py
plugins/social-media/twitter-tools/skills/twitter-to-reel/scripts/tests/: __init__.py  conftest.py  test_compose_video.py  test_create_reel.py  test_screenshot_tweet.py  test_utils.py
scripts/: markdown_formatter.py  setup_twitter_auth.py  skill_validation.py  verify-structure.py
templates/plugin-template/: README.md
templates/plugin-template/.claude-plugin/: plugin.json
templates/plugin-template/agents/: example-agent.md
templates/plugin-template/hooks/: hooks.json
templates/plugin-template/skills/example-skill/: SKILL.md
tests/: test_dummy.py
