[project]
name = "boss-skills"
version = "0.1.0"
description = "Boss Skills Repo and Lab for my personal Claude Code configs and skills"
requires-python = ">=3.13"
dependencies = [
    "jsonschema>=4.20.0",
    "rich>=13.0.0",
    "firecrawl-py>=1.0.0",
    "claude-agent-sdk>=0.1.6",
    "pyyaml>=6.0",
    "funlog>=0.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "basedpyright>=1.29.1",
    "rumdl>=0.0.208",
]

[tool.uv]
package = false
