[project]
name = "boss-skills"
version = "0.1.0"
description = "Boss Skills Repo and Lab for my personal Claude Code configs and skills"
requires-python = ">=3.13"
authors = [
    { name="Malcolm Jones", email="bossjones@theblacktonystark.com" },
]
readme = "README.md"
license = "MIT"
dependencies = [
    "jsonschema>=4.20.0",
    "rich>=13.0.0",
    "firecrawl-py>=1.0.0",
    "claude-agent-sdk>=0.1.6",
    "pyyaml>=6.0",
    "funlog>=0.2.1",
    "pillow>=12.1.0",
    "numpy>=2.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "basedpyright>=1.29.1",
    "rumdl>=0.0.208",
    "pytest-sugar>=1.1.1",
    "codespell>=2.4.1",
    "pytest-mock>=3.15.1",
    "pytest-recording>=0.13.4",
    "pytest-retry>=1.7.0",
    "pytest-skip-slow>=0.0.5",
    "pytest-skipuntil>=0.2.0",
    "pytest-subprocess>=1.5.3",
    "pytest-timeout>=2.4.0",
    "monkeytype>=23.3.0",
    "ty>=0.0.8",
]

[tool.uv]
package = false
